# artoolkit5

./: .gitignore
AndroidStudioProjects/ARBaseLibProj/aRBaseLib/: build.gradle
AndroidStudioProjects/ARSimpleNativeProj/: build.gradle
AndroidStudioProjects/ARSimpleProj/aRSimple/: build.gradle
AndroidStudioProjects/ARSimpleProj/aRSimple/src/main/res/layout/: main.xml
AndroidStudioProjects/ARSimpleProj/gradle/wrapper/: gradle-wrapper.properties
AndroidStudioProjects/nftSimpleProj/gradle/wrapper/: gradle-wrapper.properties
android/jni/: CMakeLists.txt
